# autopilot-core2

./: .env.example  .gitignore  APP_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  QA_EVIDENCE.md  README.md  REFACTOR_README.md  demo.py  demo_refactor.py  main.py  pyproject.toml  requirements.txt  test_refactor.py
connectors/: __init__.py  hackernews.py
core/: __init__.py  settings.py
pi_core/: __init__.py  config.py  database.py
pi_core/adapters/: __init__.py  github_adapter.py  reddit_adapter.py
pi_core/engines/: __init__.py  content_generator.py  marketplace_packaging.py  product_definition.py
pi_core/models/: __init__.py
pi_core/pipeline/: __init__.py
pi_core/ui/: __init__.py
pi_core/ui/templates/: dashboard.html
pipelines/: __init__.py  run_mvp.py
ui/: app.py
