[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-core"
version = "0.1.0"
description = "AI-powered problem discovery and product generation engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.13.3",
    "praw>=7.7.0",
    "PyGithub>=2.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["pi_core"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
